--- a/api-server/package.json
+++ b/api-server/package.json
@@ -14,7 +14,11 @@
     "@aws-sdk/client-ecs": "^3.758.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "random-word-slugs": "^0.1.7"
+    "ioredis": "^5.6.0",
+    "kafkajs": "^2.2.4",
+    "random-word-slugs": "^0.1.7",
+    "socket.io": "^4.8.1"
   }
 }
