--- a/building-server/package.json
+++ b/building-server/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "node dist/script.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +14,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.758.0",
     "@types/mime-types": "^2.1.4",
+    "dotenv": "^16.4.7",
+    "ioredis": "^5.6.0",
+    "kafkajs": "^2.2.4",
     "mime-types": "^2.1.35"
   },
   "devDependencies": {
