--- a/api-server/package.json
+++ b/api-server/package.json
@@ -4,7 +4,12 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc && node dist/index"
+    "build": "tsc -b",
+    "start": "node dist/src/index",
+    "dev": "tsc -b && node dist/src/index",
+    "db:generate": "drizzle-kit generate --schema db/schema.ts --dialect postgresql --out ./drizzle",
+    "db:migrate": "tsx ./scripts/migrate.ts",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
@@ -12,13 +17,26 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-ecs": "^3.758.0",
+    "@neondatabase/serverless": "^0.10.4",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.10",
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
+    "drizzle-orm": "^0.40.0",
     "express": "^4.21.2",
     "ioredis": "^5.6.0",
+    "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "random-word-slugs": "^0.1.7",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "zod": "^3.24.2"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.30.5",
+    "tsx": "^4.19.3"
   }
 }
