--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@ai-sdk/groq": "^1.1.14",
+    "@hookform/resolvers": "^4.1.3",
     "@mastra/core": "^0.6.0",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.482.0",
@@ -21,6 +24,8 @@
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.54.2",
+    "react-hot-toast": "^2.5.2",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
