--- a/api-server/package.json
+++ b/api-server/package.json
@@ -34,6 +34,7 @@
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "random-word-slugs": "^0.1.7",
+    "short-unique-id": "^5.2.0",
     "socket.io": "^4.8.1",
     "zod": "^3.24.2"
   },
