--- a/proxy-server/package.json
+++ b/proxy-server/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsc && node dist/index.js"
+    "dev": "tsc -b && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,7 +14,9 @@
     "@types/express": "^5.0.0",
     "@types/http-proxy": "^1.17.16",
     "@types/node": "^22.13.10",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "http-proxy": "^1.18.1"
+    "http-proxy": "^1.18.1",
+    "ioredis": "^5.6.0"
   }
 }
